--- a/physor.bib
+++ b/physor.bib
@@ -16,3 +16,66 @@ author = "Jerzy Cetnar"
   year={2007},
   institution={AIR FORCE INST OF TECH WRIGHT-PATTERSON AFB OH SCHOOL OF ENGINEERING AND MANAGEMENT}
 }
+
+@article{pusa2010computing,
+  title={Computing the matrix exponential in burnup calculations},
+  author={Pusa, Maria and Lepp{\"a}nen, Jaakko},
+  journal={Nuclear science and engineering},
+  volume={164},
+  number={2},
+  pages={140--150},
+  year={2010},
+  publisher={American Nuclear Society}
+}
+
+@article{pusa2012correction,
+  title={Correction to partial fraction decomposition coefficients for Chebyshev rational approximation on the negative real axis},
+  author={Pusa, Maria},
+  journal={arXiv preprint arXiv:1206.2880},
+  year={2012}
+}
+
+@article{10.7717/peerj-cs.103,
+ title = {SymPy: symbolic computing in Python},
+ author = {Meurer, Aaron and Smith, Christopher P. and Paprocki, Mateusz and \v{C}ert\'{i}k, Ond\v{r}ej and Kirpichev, Sergey B. and Rocklin, Matthew and Kumar, AMiT and Ivanov, Sergiu and Moore, Jason K. and Singh, Sartaj and Rathnayake, Thilina and Vig, Sean and Granger, Brian E. and Muller, Richard P. and Bonazzi, Francesco and Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and Curry, Matthew J. and Terrel, Andy R. and Rou\v{c}ka, \v{S}t\v{e}p\'{a}n and Saboo, Ashutosh and Fernando, Isuru and Kulal, Sumith and Cimrman, Robert and Scopatz, Anthony},
+ year = 2017,
+ month = jan,
+ keywords = {Python, Computer algebra system, Symbolics},
+ abstract = {
+            SymPy is an open source computer algebra system written in pure Python. It is built with a focus on extensibility and ease of use, through both interactive and programmatic applications. These characteristics have led SymPy to become a popular symbolic library for the scientific Python ecosystem. This paper presents the architecture of SymPy, a description of its features, and a discussion of select submodules. The supplementary material provide additional examples and further outline details of the architecture and features of SymPy.
+         },
+ volume = 3,
+ pages = {e103},
+ journal = {PeerJ Computer Science},
+ issn = {2376-5992},
+ url = {https://doi.org/10.7717/peerj-cs.103},
+ doi = {10.7717/peerj-cs.103}
+}
+
+@Inbook{Bhat1992,
+author="Bhat, M. R.",
+editor="Qaim, Syed M.",
+title="Evaluated Nuclear Structure Data File (ENSDF)",
+bookTitle="Nuclear Data for Science and Technology: Proceedings of an International Conference, held at the Forschungszentrum J{\"u}lich, Fed. Rep. of Germany, 13--17 May 1991",
+year="1992",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="817--821",
+abstract="The Evaluated Nuclear Structure Data File (ENSDF), is maintained by the National Nuclear Data Center (NNDC) on behalf of the international Nuclear Structure and Decay Data (NSDD) network organized under the auspices of the International Atomic Energy Agency. ENSDF provides evaluated experimental nuclear structure and decay data for basic and applied research. The activities of the NSDD network, the publication of the evaluations, and their use in different applications are described. Since 1986, the ENSDF and related numeric and bibliographic data bases have been made available for on-line access. The current status of these data bases, and future plans to improve the on-line access to their contents are discussed.",
+isbn="978-3-642-58113-7",
+doi="10.1007/978-3-642-58113-7_227",
+url="https://doi.org/10.1007/978-3-642-58113-7_227"
+}
+
+@misc{ensdfmaintained,
+  title={maintained by the National Nuclear Data Center at Brookhaven National Laboratory, published in Nuclear Data Sheets},
+  author={ENSDF, Evaluated Nuclear Structure Data File},
+  publisher={Academic Press, Elsevier Science}
+}
+
+@article{aldama2003wims,
+  title={WIMS-D Library Update},
+  author={Aldama, D Lopez and Leszczynski, F and Trkov, A},
+  journal={Final Report of a Co-ordinate Research Project},
+  year={2003}
+}
