--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -442,67 +442,20 @@ from published WIMS-D results \cite{aldama2003wims}. Therefore, any differences
 in the results between the binary Bateman solver and the CRAM
 solver can be ascribed to differences in methodology, not differences in data.
 
+However, it should be noted that CRAM is an approximation and the Bateman
+equations are the analytic solution. Therefore, we should expect differences
+between these two methods up to the approximation order of CRAM. In practice,
+the CRAM order is chosen to be at the level of floating point arithmetic.
+Since we generally are dealing with \texttt{double} data (64-bit), rather than
+\texttt{float} data (32-bit), the floating point error is expected to be
+approximately $10^{-16}$ for an inital unit atom density $N_1(0) = 1$.
+Thus the CRAM approximation order is chosen as 16 in the comparsion here.
 
-
-
-%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Subsection Title: First Character of Each Non-trivial Word is Uppercase}
-\label{sec:second}
-
-Double-space before and after secondary titles is automatic.  Figures and
-tables should appear as close as possible to where they are first
-cited, e.g., Fig.~\ref{fig:amdahl}, in the text.  Figures are numbered in Arabic
-numerals, with the caption centered below the figure, in \textbf{boldface}. For a better
-arrangement it is strongly recommended that all the figures must be placed in the``Figures''
-folder. Triple-space before the figure, and after the figure caption.
-\begin{figure}[!htb]
-  \centering
-  %\includegraphics[scale=0.60]{./Figures/figure.pdf}
-  \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}
-  \label{fig:amdahl}
-\end{figure}
-
-When importing figures or any graphical image please verify two things:
-\vspace{-0.65cm} % THE DISTANCE BETWEEN THE ":" AND THE FIRST LINE OF THE LIST MAY VARY DEPENDING ON THE TEXT LENGHT, CHANGE THIS VALUE DEPENDING ON YOUR NEEDS.
-\begin{itemize} \itemsep1pt \parskip0pt \parsep0pt
-\item Any number, text or symbol is in Times font and is not smaller than
-  10-point after reduction to the actual window in your paper
-\item That it can be translated into PDF
-\end{itemize}
-
-Equations, such as Eq. (\ref{sample_equation}), should be centered and
-sequentially numbered to the flush right of the formula.
-
-\begin{equation}
-  \label{sample_equation}
-  \mathrm{Speedup}=\frac{1}{\frac{f}{p}+(1-f)}
-\end{equation}
-
-The continuation of a paragraph after an equation should not be indented.
-All paragraphs, as well as section or subsection headings, are separated by
-just one single empty line.
-
-\subsubsection{Sub-subsection level and lower: only first character uppercase}
-
-See Table \ref{table:example} for a sample table.  The ``tabls'' package is
-recommended for improved row and column spacing.  Notice the caption appears
-above the table by setting the \verb!\caption! command immediately
-after the \verb!\begin{table}!. Tables are numbered in Roman
-numerals, with the caption centered above the table, in \textbf{boldface}.
-Triple-space before and after the table.
-
-\begin{table}[!htb]
-  \centering
-  \caption{\bf Parallel Performance for the Sample Problem}
-  \label{table:example}
-  \begin{tabular}{|c|c|c|c|} \hline
-   Number of & Wall-Clock & Speedup & Efficiency \\
-   Processors & Time$^{a}$ (min) & (T$_{s}$/T$_{p}$) & (\%) \\ \hline
-    \ 1 &  100.0 & \ ---    & ---  \\ \hline
-    \ 2 &   52.6 & \ 1.9    & 95.0 \\ \hline
-  \end{tabular}
-\end{table}
+In the comparsion here, 3491 nuclides were decayed from an initial unit
+concentration. Decays took place on a log-uniform grid from $10$ to $10^20$
+seconds. Including $t=0$, there are 40 points in the time grid. This grid
+compares spans times domains that are generally of interest to nuclear
+engineers.
 
 \section{CONCLUSIONS}
 
@@ -537,12 +490,6 @@ $a_i$                & 1/seconds & Negative inverse of half-life, $-1/t_{1/2,i}$
 \hline
 \end{tabular}
 \end{table}
-
-\textbf{As an example:} The format for this template was adapted from the \LaTeX
-template for the PHYSOR-2012 conference posted and available on the Internet and
-most of the \LaTeX\ format definitions contained in this were already defined. The
-PHYSOR-2018 organizing committee deeply thank the PHYSOR-2012 technical committee
-for this great support.
 
 % Bibliography
 \setlength{\baselineskip}{12pt}
