--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -418,8 +418,38 @@ In principle, each of these statements is reasonable. However, they
 may preclude desired behavior by users. In such a situation, these
 assumptions should be revisited.
 
-\section{CRAM Comparison}
-\label{sec-cram}
+
+\section{METHOD VERIFICATION}
+\label{sec-verify}
+This section contains two comparisons of the binary Bateman equations
+as presented in Eq. (\ref{final-form-a})-(\ref{k-bin-pq-degen-2}). These
+comparsions verify that the method described here is correct, up to
+floating point error. The first comparsion simply verifys that the
+initial nuclide decays properly. The second and more involved comparsion
+uses the Chebychev Rational Approximation Method (CRAM)
+for transmutation \cite{pusa2010computing,pusa2012correction} as the point
+of comparsion.
+
+In the comparsions here, 3491 nuclides were decayed from an initial unit
+concentration. Decays took place on a log-uniform grid from $10$ to $10^{20}$
+seconds. Including $t=0$, there are 40 points in the time grid. This grid
+compares spans times domains that are generally of interest to nuclear
+engineers. This nuclide \& time comparison thus provides a set of 139640
+decayed compositions to compare.
+
+\subsection{$N_1(t)$ Comparsion}
+\label{subsec-n1}
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.80]{./n1-diff.pdf}
+  \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}
+  \label{fig:amdahl}
+\end{figure}
+
+
+\subsection{CRAM Comparison}
+\label{subsec-cram}
 To verify that the binary formualtion of the Bateman equations as presented in
 Eq. (\ref{final-form-a})-(\ref{k-bin-pq-degen-2}) is correct, its implementaion
 can be compared to the Chebychev Rational Approximation Method (CRAM)
@@ -450,12 +480,6 @@ Since we generally are dealing with \texttt{double} data (64-bit), rather than
 \texttt{float} data (32-bit), the floating point error is expected to be
 approximately $10^{-16}$ for an inital unit atom density $N_1(0) = 1$.
 Thus the CRAM approximation order is chosen as 16 in the comparsion here.
-
-In the comparsion here, 3491 nuclides were decayed from an initial unit
-concentration. Decays took place on a log-uniform grid from $10$ to $10^20$
-seconds. Including $t=0$, there are 40 points in the time grid. This grid
-compares spans times domains that are generally of interest to nuclear
-engineers.
 
 \section{CONCLUSIONS}
 
