--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -25,7 +25,8 @@
 %
 % Define title...
 %
-\title{LIMITING CASES OF THE BINARY FORMULATION OF DECAY EQUATIONS}
+\title{BINARY FORMULATION OF DECAY EQUATIONS \\
+       WITH LIMITING CASES \& CRAM COMPARISON}
 %
 % ...and authors
 %
@@ -45,7 +46,7 @@
 \newcommand{\authorHead}      % Author's names here use et al. if more than 3
            {Scopatz and Meurer}
 \newcommand{\shortTitle}      % Short title here (Shorten to fit all into a single line)
-           {Limiting cases of the Binary Formulation of Decay Equations}
+           {Limiting Cases of the Binary Formulation of Decay Equations}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %   BEGIN DOCUMENT
@@ -444,7 +445,7 @@ decayed compositions to compare.
   \centering
   \includegraphics[scale=0.80]{./n1-diff.pdf}
   \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}
-  \label{fig:amdahl}
+  \label{fig-n1}
 \end{figure}
 
 
@@ -491,9 +492,9 @@ Present your summary and conclusions here.
 Variables used throughout this paper have are described in Table \ref{nomenclature}.
 
 \begin{table}[!htb]
-\label{nomenclature}
-\caption{Symbols, Units, \& Meaning}
 \centering
+\caption{Symbols, Units, \& Meaning}
+\label{nomenclature}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{Symbol} & \textbf{Units} & \textbf{Meaning} \\
@@ -505,7 +506,7 @@ $p$                  & unitless  & Index for \pth species, which is special \\
 $q$                  & unitless  & Index for \qth species, whose half-life is the same as $p$ \\
 $t$                  & seconds   & Time \\
 $t_{1/2,i}$          & seconds   & Half-life of the \ith species \\
-$\lambda_i$          & 1/seconds & Decay constant of ith species, $\ln(2)/t_{1/2,i}$ \\
+$\lambda_i$          & 1/seconds & Decay constant of \ith species, $\ln(2)/t_{1/2,i}$ \\
 $N_i(t)$             & 1/cm$^3$  & Number density of the \ith species at time t \\
 $\gamma_{i \to i+1}$ & unitless  & Branch ratio bewteen \ith species and its child \\
 $\gamma$             & unitless  & Total branch ratio for a chain \\
