--- a/physor.bib
+++ b/physor.bib
@@ -79,3 +79,12 @@ url="https://doi.org/10.1007/978-3-642-58113-7_227"
   journal={Final Report of a Co-ordinate Research Project},
   year={2003}
 }
+
+@inproceedings{scopatz2015decay,
+ address = {San Antonio, TX, USA},
+ author = {Scopatz, Anthony and Bates, Cameron and Wilson, Paul},
+ booktitle = {Am. Nuc. Soc. Annual Meeting 2015},
+ month = {June},
+ title = {Binary Formulation of Decay Equations},
+ year = {2015}
+}
