--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -57,15 +57,15 @@
 \justify
 
 \begin{abstract}
-This paper presents a binary formaulation of the Bateman equations
+This paper presents a binary formulation of the Bateman equations
 for radioactive decay. This work includes various limiting cases
-that arrise in real-world calculations due to ill-behaved nuclear data
+that arise in real-world calculations due to ill-behaved nuclear data
 or floating point arithmetic issues. A binary formulation is advantageous
 due to it speed, often orders of magnitude faster than a traditional solver.
 After the binary formulation with limiting cases has been described,
-this paper presents a verification study tha compares the binary solver
-to the Chebychev Rational Approximation Method (CRAM). The comparion
-between CRAM and the solver descibed demonstrates that the method is
+this paper presents a verification study that compares the binary solver
+to the Chebyshev Rational Approximation Method (CRAM). The comparison
+between CRAM and the solver described demonstrates that the method is
 well within floating point precision for most nuclides and times.
 \end{abstract}
 \keywords{bateman, decay, cram, pyne}
@@ -79,10 +79,10 @@ case, radioactive decay is a function solely on intrinsic physical parameters:
 half-lives, branch ratios, and fission product yields. This document recasts the
 Bateman equations into a form that is better suited for computation than
 the traditional expression. Unlike previous work along these lines
-\cite{scopatz2015decay}, the formuation presented here aims to remove the
+\cite{scopatz2015decay}, the formulation presented here aims to remove the
 assumption that the nuclear data is well-behaved.
 
-The fundemntal nuclear data is not well-behaved. There are degeneracies in
+The demountable nuclear data is not well-behaved. There are degeneracies in
 half-lives. There are cases where prominent nuclides (such as U-238) are
 almost stable, relative to floating point precision. Since these issues
 cannot be tackled in the data itself, they must be handled by the
@@ -94,8 +94,8 @@ falls apart.
 In \S\ref{sec-normal-method}, this paper derives the Bateman equation
 limiting cases using the traditional decay constant formulation.
 \S\ref{sec-binary} continues on to recast these in a binary formulation.
-The binary formualtion has computaional speed advanatages over the
-traditional method. \S\ref{sec-impl-spec-approx} the presents the implemntation
+The binary formalization has computation speed advantageous over the
+traditional method. \S\ref{sec-impl-spec-approx} the presents the implantation
 specific approximations that are made with the equations found in
 \S\ref{sec-binary}. The assumptions listed in \S\ref{sec-impl-spec-approx}
 are much reduced from previous work \cite{scopatz2015decay}.
@@ -146,7 +146,7 @@ in front of the summation:
 N_C(t) = N_1(0)  \gamma \left[1.0 - \sum_{i=1}^{C-1} \left(\prod_{j=1,i\ne j}^{C-1} \frac{\lambda_j}{\lambda_j - \lambda_i} \right) e^{-\lambda_i t} \right]
 \end{equation}
 
-From here, certain chains have intermeadiate nuclides which are \emph{almost} stable
+From here, certain chains have intermediary nuclides which are \emph{almost} stable
 (within the limits of floating point precision). For example, decaying
 from Es-254 to Po-210 goes through U-238, which is very close to stable relative to all of the
 other nuclides in the chain. This can trigger some terms of the Bateman equation to
@@ -222,7 +222,7 @@ $\lambda_p \ll \lambda_{i\ne p,C}$.
 \end{equation}
 
 Lastly, we must handle the degenerate case where two nuclides in a chain  have the same exact half-lives.
-This unfortunate situation arrises out of the fundemental nuclear data. Call these the \pth and \qth
+This unfortunate situation arises out of the decremental nuclear data. Call these the \pth and \qth
 species. To prevent underflow, overflow, and NaNs, we must separate these nuclides out of the summation
 and then take the limit as $\lambda_q \to \lambda_p$.
 \begin{equation}
@@ -317,7 +317,7 @@ where the coefficients $k_i$ are defined as follows:
 \end{itemize}
 If the $k_i$ above are computed at run time then the this expression results in much more
 computational effort that than the original Bateman equations since $\gamma/\lambda_C$
-are brought into the summation. However, when $k_i$ are pre-caluclated,
+are brought into the summation. However, when $k_i$ are pre-calculated,
 many floating point operations are saved by avoiding explicitly computing $c_i$.
 
 The second strategy is to note that computers are much better at computing powers of
@@ -352,10 +352,10 @@ as follows:
 \end{equation}
 where the $k_i$ are as listed above.  However, for practical purposes, it is better to
 compute the $k_i$ from half-lives rather than decay constants.  This is because they
-provide less floating point error, fewer oppurtunities to underflow or overflow to NaN or infinity,
+provide less floating point error, fewer opportunities to underflow or overflow to NaN or infinity,
 and a better mechanism for detecting stability.
 
-Thus, alternatively, the $k_i$ are computedas:
+Thus, alternatively, the $k_i$ are computed as:
 \begin{itemize}
 \item \textbf{Single Nuclide in Chain:}
 \begin{equation}
@@ -441,7 +441,7 @@ that are calculated.
    end atom fraction. The threshold $10^{-16}$ was chosen as
    because it is a reasonable naive estimate of floating point error after
    many operations. Note that we may filter only on the $k_i$ because
-   $2^{a_i t} \le 1$.  That is, the exponentional component can only
+   $2^{a_i t} \le 1$.  That is, the exponential component can only
    reduce the magnitude of a term, not increase it.
 \end{enumerate}
 In principle, each of these statements is reasonable. However, they
@@ -453,32 +453,32 @@ assumptions should be revisited.
 \label{sec-verify}
 This section contains two comparisons of the binary Bateman equations
 as presented in Eq. (\ref{final-form-a})-(\ref{k-bin-pq-degen-2}). These
-comparsions verify that the method described here is correct, up to
-floating point error. The first comparsion simply verifys that the
-initial nuclide decays properly. The second and more involved comparsion
-uses the Chebychev Rational Approximation Method (CRAM)
+comparisons verify that the method described here is correct, up to
+floating point error. The first comparison simply verifies that the
+initial nuclide decays properly. The second and more involved comparison
+uses the Chebyshev Rational Approximation Method (CRAM)
 for transmutation \cite{pusa2010computing,pusa2012correction} as the point
-of comparsion.
+of comparison.
 
-In the comparsions here, 3491 nuclides were decayed from an initial unit
+In the comparisons here, 3491 nuclides were decayed from an initial unit
 concentration. Decays took place on a log-uniform grid from $10$ to $10^{20}$
 seconds. Including $t=0$, there are 40 points in the time grid. This grid
 compares spans times domains that are generally of interest to nuclear
 engineers. This nuclide \& time comparison thus provides a set of 139640
 decayed compositions to compare.
 
-\subsection{$N_1(t)$ Comparsion}
+\subsection{$N_1(t)$ Comparison}
 \label{subsec-n1}
 For this first comparison, note that the solution for the initial nuclide is
 the relatively simple $N_1(t) = e^{-\lambda_1 t}$. Since this is analytic and
 easy to compute, the binary Bateman solver ought to compute this same
-value to within floating point error.  Call $b(t)$ the concetration of the
+value to within floating point error.  Call $b(t)$ the concentration of the
 same initial nuclide as computed by the binary Bateman solver.
 
 Fig.~\ref{fig-n1} shows the absolute value of the difference between
 the traditional Bateman solution $e^{-\lambda_1 t}$ and the binary
 solution presented here. The gray lines show the difference as a function
-of time for inidividual, representative nuclides in the set analyzed.
+of time for individual, representative nuclides in the set analyzed.
 The red curve in Fig.~\ref{fig-n1} displays the mean difference over all
 times, along with one standard deviation error bars.
 
@@ -486,9 +486,9 @@ times, along with one standard deviation error bars.
   \centering
   \includegraphics[scale=0.80]{./n1-diff.pdf}
   \caption{The difference between known decay of initial nuclide and the
-           binary bateman solution for all 3491 nuclides. The red line
+           binary Bateman solution for all 3491 nuclides. The red line
            is the average of the absolute value of difference with
-           error bars repesenting 1 standard deviation. The gray lines
+           error bars representing 1 standard deviation. The gray lines
            are curves for a subselection of example nuclides which comprise
            the mean.}
   \label{fig-n1}
@@ -497,9 +497,9 @@ times, along with one standard deviation error bars.
 As can be seen from Fig.~\ref{fig-n1}, the mean difference tends to zero for
 higher decay times.  Moreover, this mean difference curve itself seems to
 follow an exponential decay. Importantly, all values in Fig.~\ref{fig-n1}
-fall within what could be resonably expected for floating point error for
+fall within what could be reasonably expected for floating point error for
 \texttt{double} precision computation. Additionally, the gray curves
-demonstate that for some indvidual nuclides, the difference has a minimum
+demonstrate that for some individual nuclides, the difference has a minimum
 modal bound. These can be as high as $2.2\times 10^{-16}$. This higher
 difference modes persist at long time scales, even as the mean difference
 tends to zero.
@@ -511,14 +511,14 @@ now include a both a binary Bateman solver and a CRAM solver.
 The CRAM solver is code generated using SymPy \cite{10.7717/peerj-cs.103},
 while the binary Bateman solver is code generated using a custom algorithm.
 For the CRAM solver, a decay-only matrix can be constructed from the
-fundemental nuclear data. This decay-only matrix, thus, does not include
+fundamental nuclear data. This decay-only matrix, thus, does not include
 any transmutation from neutron interactions. This usage is distinct from
 most usages of CRAM, which typically are focused on depletion calculation.
 
 To create a fair comparison, both solvers where generated from the same
-fundemental set of nuclear data. Half-lives and branch
+fundamental set of nuclear data. Half-lives and branch
 ratios came from the May 1$^{\mathrm{st}}$, 2017 release of ENSDF
-\cite{Bhat1992,ensdfmaintained}. Fission product yeild data was obtained
+\cite{Bhat1992,ensdfmaintained}. Fission product yield data was obtained
 from published WIMS-D results \cite{aldama2003wims}. Therefore, any differences
 in the results between the binary Bateman solver and the CRAM
 solver can be ascribed to differences in methodology, not differences in data.
@@ -529,8 +529,8 @@ between these two methods up to the approximation order of CRAM. In practice,
 the CRAM order is chosen to be at the level of floating point arithmetic.
 Since we generally are dealing with \texttt{double} data (64-bit), rather than
 \texttt{float} data (32-bit), the floating point error is expected to be
-approximately $10^{-16}$ for an inital unit atom density $N_1(0) = 1$.
-Thus the CRAM approximation order is chosen as 16 in the comparsion here.
+approximately $10^{-16}$ for an initial unit atom density $N_1(0) = 1$.
+Thus the CRAM approximation order is chosen as 16 in the comparison here.
 
 \begin{figure}[!htb]
   \centering
@@ -538,7 +538,7 @@ Thus the CRAM approximation order is chosen as 16 in the comparsion here.
   \caption{A histogram of the absolute value of the differences between the
            binary Bateman solution $b(t, i\to j)$
            and the CRAM solution  $r_{16,16}(t, i\to j)$ for all decays
-           from an intial \ith nuclide to a \jth nuclide for all times.}
+           from an initial \ith nuclide to a \jth nuclide for all times.}
   \label{fig-diff-hist}
 \end{figure}
 
@@ -561,7 +561,7 @@ where the difference is beyond acceptable floating point errors. Since differenc
 in data may be discounted, these errors are likely caused by CRAM solves
 having relatively inaccurate eigenvalues for the decay problem. CRAM performs
 far more arithmetic operations when inverting the decay matrix the binary Bateman
-solver. This occationally leads to catastrophic floating point cancelation
+solver. This occasionally leads to catastrophic floating point cancellation
 issues and results in the high errors seen here.
 
 Still, even though certain cases have high errors, no error exceeds 0.1.
@@ -577,13 +577,13 @@ to traditional nuclear engineering applications.
 
 In summary, the binary formulation of the traditional Bateman equations
 is a fast and correct solver for radioactive decay problems. Because this
-method minimzies run time arithmetic operations and takes advantage of
+method minimizes run time arithmetic operations and takes advantage of
 \texttt{exp2()} speed over \texttt{exp()}, the solver here can be orders of
 magnitude faster than alternatives. Furthermore, in comparison to CRAM used
 for the same problem, the binary solver is correct to within floating point
 error for almost all cases. Those differences with CRAM which are
 unreasonably high stem from the approximations that CRAM makes. These
-approximations involve inverting many matricies. CRAM, thus, requires many
+approximations involve inverting many matrices CRAM, thus, requires many
 more arithmetic operations and much longer run times.
 
 The advantage of deriving the limiting cases for the binary Bateman solver
@@ -592,7 +592,7 @@ a reduction in the number of assumptions made by previous work
 \cite{scopatz2015decay}. This in turn lead to a drastic reduction in the
 error of the previous solver. Properly handling degenerate half-lives and
 almost-stable nuclides improves the quality of the solution for the whole
-decay chain in which these issues arrise.
+decay chain in which these issues arise
 
 \section*{NOMENCLATURE}
 \label{sec-nomen}
@@ -616,7 +616,7 @@ $t$                  & seconds   & Time \\
 $t_{1/2,i}$          & seconds   & Half-life of the \ith species \\
 $\lambda_i$          & 1/seconds & Decay constant of \ith species, $\ln(2)/t_{1/2,i}$ \\
 $N_i(t)$             & 1/cm$^3$  & Number density of the \ith species at time t \\
-$\gamma_{i \to i+1}$ & unitless  & Branch ratio bewteen \ith species and its child \\
+$\gamma_{i \to i+1}$ & unitless  & Branch ratio between \ith species and its child \\
 $\gamma$             & unitless  & Total branch ratio for a chain \\
 $k_i$                & unitless  & Coefficients allowing for sum-of-exponentials \\
 $a_i$                & 1/seconds & Negative inverse of half-life, $-1/t_{1/2,i}$ \\
