--- a/decay_analysis.ipynb
+++ b/decay_analysis.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -530,13 +532,7 @@
       "Running nuc Sc56\n",
       "Running nuc Ti56\n",
       "Running nuc V56\n",
-      "Running nuc Cr56\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running nuc Cr56\n",
       "Running nuc Mn56\n",
       "Running nuc Fe56\n",
       "Running nuc Co56\n",
@@ -1945,13 +1941,7 @@
       "Running nuc Pr144\n",
       "Running nuc Pr144M\n",
       "Running nuc Nd144\n",
-      "Running nuc Pm144\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running nuc Pm144\n",
       "Running nuc Sm144\n",
       "Running nuc Eu144\n",
       "Running nuc Gd144\n",
@@ -3614,7 +3604,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b = np.zeros((NTIMES, NNUCS), dtype=float)\n",
@@ -3629,7 +3621,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "diagdiff = np.abs(d - b)\n",
@@ -3702,7 +3696,7 @@
     }
    ],
    "source": [
-    "plt.switch_backend('pgf')\n",
+    "#plt.switch_backend('pgf')\n",
     "plt.plot(TIMES[1:], diagdiff[1:, :], color='gray', alpha=0.01)\n",
     "plt.errorbar(TIMES[1:], mu_diagdiff[1:], yerr=sigma_diagdiff[1:], color='red', capsize=2, label='mean')\n",
     "plt.axis([TIMES[1]*0.75, TIMES[-1]*1.25, -0.5e-16, 6e-16])\n",
@@ -3725,7 +3719,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bateman_diff_plot(nuc, batemans, crammeds):\n",
@@ -3757,7 +3753,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#bateman_diff_plot('I131', batemans=batemans, crammeds=crammeds)\n",
@@ -3863,7 +3861,7 @@
     }
    ],
    "source": [
-    "plt.switch_backend('pgf')\n",
+    "#plt.switch_backend('pgf')\n",
     "plt.figure(figsize=(9,6))\n",
     "diff_vals = np.array(diff_arrs.flat)\n",
     "diff_vals[diff_vals < 1e-32] = 2e-32  # put very small values in lowest bin\n",
@@ -3996,7 +3994,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for ouc in batemans[nuc].keys():\n",
@@ -4008,14 +4008,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
